--- a/sass/theme-styles/_variables.scss
+++ b/sass/theme-styles/_variables.scss
@@ -118,7 +118,7 @@ $bg-accordion: #131418 !default;
 $bg-accordion-grey: #1e2126 !default;
 $bg-accordion-faqs: #181a20 !default;
 $table-border-color: #21232b !default;
-$testimonial-bg: #131519 !default;
+$testimonial-bg: #abaeb655 !default;
 $rait-color: #fecd35 !default;
 $quote-hover-color: #1e1f24 !default;
 $input-color: #a0a9ba !default;
